--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="sideBySide" ng-controller="AppController">
   <head>
-    <base href="/Ningen-Shikkaku/">
-    <title ng-bind="title()">Side By Side viewer</title>
+    <base href="/sbs-ns/">
+    <title ng-bind="title()">Side-by-Side NS</title>
     <meta charset="utf-8">
     <meta name="description" content="{{ description() }}">
     <script>html5Mode=false;</script>
