--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="" ng-click="flipPick()">
             <svg class="icon">
               <use xlink:href="/fonts/icons.svg#icon-menu"></use>
-            </svg><span>Compare translations</span></a></li>
+            </svg><span>Compare</span></a></li>
         <li><a href="" ng-click="showPage('about')">
             <svg class="icon">
               <use xlink:href="/fonts/icons.svg#icon-star"></use>
